landing page design alignments and membership plans alignments set correctly

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -812,7 +812,20 @@ img.h-patteren {
     color: #FFFFC8;
     text-align: center;
     font-weight: 500;
-    margin-bottom: 13%;
+    margin-bottom: 23px;
+    font-family: 'Inter', sans-serif !important;
+}
+.saave2 {
+    color: #1C1C1C ;
+    /*text-align: center;
+    margin-bottom: 15%;
+    font-weight: 500;
+    margin-bottom: 15%;
+    font-family: 'Inter', sans-serif !important;*/
+    text-align: center;
+    font-weight: 500;
+    /*margin-bottom: 13%;*/
+    margin-bottom: 23px;
     font-family: 'Inter', sans-serif !important;
 }
 .heading {
@@ -865,19 +878,6 @@ button.start-membershiIp {
     margin-top: 12px;
     color: #1C1C1C;
 }
-.saave2 {
-    color: #1C1C1C ;
-    /*text-align: center;
-    margin-bottom: 15%;
-    font-weight: 500;
-    margin-bottom: 15%;
-    font-family: 'Inter', sans-serif !important;*/
-    text-align: center;
-    font-weight: 500;
-    /*margin-bottom: 13%;*/
-    margin-bottom: 23px
-    font-family: 'Inter', sans-serif !important;
-}
 .heading2 {
     color: #1C1C1C;
     font-size: 14px;
@@ -919,6 +919,7 @@ button.start-membership {
     background: #1C1C1C;
     border-radius: 12px;
     padding: 60px;
+    border:1px solid #000000;
 }
 .membership2{
     background: #FFFFC8;
